--- a/tagging_app/templates/tagging_app/tagging_head_inc.html
+++ b/tagging_app/templates/tagging_app/tagging_head_inc.html
@@ -7,6 +7,7 @@
       <!--type="text/css">-->
 <!--<link rel="stylesheet" href="http://qtip2.com/v/2.2.1/jquery.qtip.min.css" type="text/css">-->
 <!--<script src="http://qtip2.com/v/2.2.1/jquery.qtip.min.js" ></script>-->
+<!--<script src="{% static 'obj_sys/js/tagator/fm.tagator.jquery.js' %}" ></script>-->
 <script src="{% static 'jquery.qtip.min.js' %}" ></script>
 <script src="{% static 'js/tagging_ajax.js' %}" ></script>
 <script src="{% static 'js/tagging_app.js' %}" ></script>
