Update tagging app.

--- a/tagging_app/templates/tagging_app/tagging_head_inc.html
+++ b/tagging_app/templates/tagging_app/tagging_head_inc.html
@@ -11,4 +11,5 @@
 <script src="{% static 'jquery.qtip.min.js' %}" ></script>
 <script src="{% static 'js/tagging_ajax.js' %}" ></script>
 <script src="{% static 'js/tagging_app.js' %}" ></script>
+<script src="{% static 'js/tag_app_init.js' %}" ></script>
 <script src="{% static 'obj_sys/js/jQuery-Tags-Input/src/jquery.tagsinput.js' %}" ></script>
