Update tag string generator.

--- a/tagging_app/templates/tagging_app/tagging_head_inc.html
+++ b/tagging_app/templates/tagging_app/tagging_head_inc.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'jquery.qtip.min.css'%}" type="text/css">
+<link rel="stylesheet" href="{% static 'css/tagging_app.css'%}" type="text/css">
 <!--<link rel="stylesheet" href="{% static 'obj_sys/js/tagator/fm.tagator.jquery.css'%}" type="text/css">-->
 <!--<link rel="stylesheet"-->
       <!--href="{% static 'obj_sys/js/jQuery-Tags-Input/dist/jquery.tagsinput.min.css'%}"-->
